Fixed bottom margin in megaphone

--- a/src/app/shared/components/sticky-button/sticky-button.component.scss
+++ b/src/app/shared/components/sticky-button/sticky-button.component.scss
@@ -54,7 +54,7 @@
 .fixed-container {
   width: 100%;
   max-width: 500px;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   z-index: 10;
 
